module(
    name = "lobster",
    compatibility_level = 1,
    version = "0.13.2",
)

bazel_dep(
    name = "rules_python",
    version = "1.5.1",
)

bazel_dep(name = "rules_python_gazelle_plugin", version = "1.5.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.defaults(
    # Use python.defaults if you have defined multiple toolchain versions.
    python_version = "3.9",
    python_version_env = "BAZEL_PYTHON_VERSION",
)

python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.9",
)

use_repo(python, "python_versions")

bazel_dep(name = "googletest", version = "1.13.0")
bazel_dep(name = "trlc", version = "0.0.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "lobster_dependencies",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)

pip.parse(
    hub_name = "pip",
    python_version = "3.9",
    requirements_lock = "//:requirements_lock_3_9.txt",
    requirements_windows = "//:requirements_windows_3_9.txt",
)

use_repo(pip, "pip")

bazel_dep(name = "gazelle", version = "0.44.0", repo_name = "bazel_gazelle")
use_repo(python, "python_3_9")

git_override(
    commit = "650b51a47264a4f232b3341f473527710fc32669",
    module_name = "trlc",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)
