module(
    name = "lobster",
    compatibility_level = 1,
    version = "0.13.2",
)

##################################
# Setup python
##################################
bazel_dep(
    name = "rules_python",
    version = "1.5.1",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.defaults(
    # Use python.defaults if you have defined multiple toolchain versions.
    python_version = "3.9",
    python_version_env = "BAZEL_PYTHON_VERSION",
)

python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.9",
)

python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.8",
)
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)

use_repo(
    python,
    "pythons_hub",
    python = "python_versions",
)

use_repo(python, "python_3_9")

##################################
# Setup pip dependencies
##################################
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
use_repo(pip, "lobster_dependencies")

pip.parse(
    hub_name = "lobster_dependencies",
    python_version = "3.8",
    requirements_lock = "//bazel:requirements_lock_3_8.txt",
)
pip.parse(
    hub_name = "lobster_dependencies",
    python_version = "3.9",
    requirements_lock = "//bazel:requirements_lock_3_9.txt",
)
pip.parse(
    hub_name = "lobster_dependencies",
    python_version = "3.12",
    requirements_lock = "//bazel:requirements_lock_3_12.txt",
)

##################################
# Setup TRLC
##################################

bazel_dep(name = "trlc", version = "0.0.0")

git_override(
    commit = "650b51a47264a4f232b3341f473527710fc32669",
    module_name = "trlc",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

##################################
# Remaining Dependencies
##################################
bazel_dep(name = "googletest", version = "1.13.0")
