load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "run_tool_tests",
    srcs = ["run_tool_tests.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "tests_system",
    srcs = [
        "__init__.py",
        "args_to_list.py",
        "asserter.py",
        "run_tool_tests.py",
        "system_test_case_base.py",
        "testrunner.py",
    ],
    visibility = ["//visibility:public"],
)
