load("@rules_python//python:defs.bzl", "py_binary", "py_library")

# BUILD.bazel
# gazelle:exclude __init__.py

py_binary(
    name = "run_tool_tests",
    srcs = ["run_tool_tests.py"],
    visibility = [
        "//visibility:public",
    ],
)

py_library(
    name = "tests_system",
    srcs = [
        "args_to_list.py",
        "asserter.py",
        "run_tool_tests.py",
        "system_test_case_base.py",
        "testrunner.py",
    ],
    visibility = [
        "//visibility:public",
    ],
)
