load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "tests_unit",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "test_ci_report",
    srcs = ["lobster_ci_report/test_ci_report.py"],
)

py_test(
    name = "test_file_tag_generator",
    srcs = ["test_file_tag_generator.py"],
    deps = ["//lobster/common"],
)

py_test(
    name = "test_io",
    srcs = ["test_io.py"],
    deps = ["//lobster/common"],
)

py_test(
    name = "test_io_signal_duplicate_items",
    srcs = ["test_io_signal_duplicate_items.py"],
    deps = ["//lobster/common"],
)

py_test(
    name = "test_items",
    srcs = ["test_items.py"],
    deps = ["//lobster/common"],
)

py_test(
    name = "test_json",
    srcs = ["test_json.py"],
    deps = ["//lobster/tools/json"],
)

py_test(
    name = "test_location",
    srcs = ["test_location.py"],
    deps = ["//lobster/common"],
)

py_test(
    name = "test_meta_data_tool_base",
    srcs = ["test_meta_data_tool_base.py"],
    deps = ["//lobster/common"],
)

py_test(
    name = "test_tool",
    srcs = ["test_tool.py"],
    deps = [
        "//lobster/common",
        "@pip//pyyaml",
    ],
)
