load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "lexer",
    srcs = ["lexer.py"],
    visibility = ["//visibility:public"],
    deps = [":common"],
)

py_binary(
    name = "parser",
    srcs = ["parser.py"],
    visibility = ["//visibility:public"],
    deps = [":common"],
)

py_library(
    name = "common",
    srcs = [
        "__init__.py",
        "errors.py",
        "exceptions.py",
        "file_tag_generator.py",
        "io.py",
        "items.py",
        "lexer.py",
        "location.py",
        "meta_data_tool_base.py",
        "parser.py",
        "report.py",
        "tool.py",
        "version.py",
    ],
    visibility = ["//visibility:public"],
    deps = ["@pip//pyyaml"],
)
