load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_binary(
    name = "mock_server",
    srcs = ["mock_server.py"],
    visibility = ["//:__subpackages__"],
    deps = ["@pip//flask"],
)

py_library(
    name = "lobster_codebeamer",
    srcs = [
        "__init__.py",
        "lobster_codebeamer_asserter.py",
        "lobster_codebeamer_system_test_case_base.py",
        "lobster_codebeamer_test_runner.py",
        "mock_server.py",
        "mock_server_setup.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tests_system",
        "@pip//flask",
        "@pip//pyyaml",
    ],
    data = [
        "//tests_system/lobster_codebeamer/data:codebeamer_data_system",
    ],
)

py_test(
    name = "test_extract_requirements",
    srcs = ["test_extract_requirements.py"],
    deps = [
        ":lobster_codebeamer",
        "@pip//flask",
    ],
)

py_test(
    name = "test_lobster_codebeamer",
    srcs = ["test_lobster_codebeamer.py"],
    deps = [
        ":lobster_codebeamer",
        "//tests_system",
        "@pip//flask",
    ],
)

py_test(
    name = "test_valid_flow",
    srcs = ["test_valid_flow.py"],
    deps = [
        ":lobster_codebeamer",
        "@pip//flask",
    ],
)
