load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("//:requirements.bzl", "requirement")

# BUILD.bazel
# gazelle:exclude __init__.py

py_binary(
    name = "mock_server",
    srcs = ["mock_server.py"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        requirement("flask"),
        requirement("requests"),
    ],
)

py_library(
    name = "lobster_codebeamer",
    srcs = [
        "lobster_codebeamer_asserter.py",
        "lobster_codebeamer_system_test_case_base.py",
        "lobster_codebeamer_test_runner.py",
        "mock_server.py",
        "mock_server_setup.py",
    ],
    data = [
        "//tests_system/lobster_codebeamer/data:codebeamer_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:lobster",
        "//tests_system",
        requirement("flask"),
        requirement("pyyaml"),
        requirement("requests"),
    ],
)

py_test(
    name = "test_extract_requirements",
    srcs = ["test_extract_requirements.py"],
    tags = ["exclusive"],
    deps = [
        ":lobster_codebeamer",
        requirement("flask"),
    ],
)

py_test(
    name = "test_lobster_codebeamer",
    srcs = ["test_lobster_codebeamer.py"],
    tags = ["exclusive"],
    deps = [
        ":lobster_codebeamer",
        "//tests_system",
        requirement("flask"),
    ],
)

py_test(
    name = "test_valid_flow",
    srcs = ["test_valid_flow.py"],
    tags = ["exclusive"],
    deps = [
        ":lobster_codebeamer",
        requirement("flask"),
    ],
)
