load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("//:requirements.bzl", "requirement")

# BUILD.bazel
# gazelle:exclude __init__.py

py_binary(
    name = "mock_server",
    srcs = ["mock_server.py"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        requirement("flask"),
        requirement("requests"),
    ],
)

py_library(
    name = "lobster_codebeamer",
    srcs = [
        "lobster_codebeamer_asserter.py",
        "lobster_codebeamer_system_test_case_base.py",
        "lobster_codebeamer_test_runner.py",
        "mock_server.py",
        "mock_server_setup.py",
    ],
    data = [
        "//tests_system/lobster_codebeamer/data:codebeamer_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:lobster",
        "//tests_system",
        requirement("flask"),
        requirement("pyyaml"),
        requirement("requests"),
    ],
)

ALL_TEST_SRCS = glob(["test_*.py"])

# Exclude the files which are not part of tool qualification yet

EXCLUDED_FROM_SUITE = ["test_baseline_id.py"]

test_suite(
    name = "lobster_codebeamer_tests",
    tests = [
        ":" + src[:-3]
        for src in ALL_TEST_SRCS
        if src not in EXCLUDED_FROM_SUITE
    ],
)

[py_test(
    name = src[:-3],
    srcs = [src],
    deps = [
        ":lobster_codebeamer",
        requirement("flask"),
    ],
) for src in ALL_TEST_SRCS]
