load("@rules_python//python:defs.bzl", "py_library", "py_test")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_cpptest",
    srcs = [
        "lobster_cpptest_asserter.py",
        "lobster_cpptest_system_test_case_base.py",
        "lobster_cpptest_test_runner.py",
    ],
    data = [
        "//tests_system/lobster_cpptest/data:cpptest_data_system",
        "//tests_system/lobster_cpptest/data/cpp_test_files:cpptest_test_files_system",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lobster",
        "//tests_system",
    ],
)

test_suite(
    name = "lobster_cpptest_tests",
)

[py_test(
    name = src[:-3],
    srcs = [src],
    deps = [
        ":lobster_cpptest",
        "//lobster/tools/cpptest",
        "//tests_system/tests_utils",
    ],
) for src in glob(["test_*.py"])]
