load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "lobster_html_report",
    srcs = [
        "__init__.py",
        "lobster_UI_system_test_case_base.py",
        "lobster_UI_test_runner.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tests_system",
        "@pip//selenium",
        "@pip//webdriver_manager",
    ],
    data = [
        "//tests_system/lobster_html_report/data:html_report_data_system",
    ],
)

py_test(
    name = "test_html_report",
    srcs = ["test_html_report.py"],
    deps = [
        ":lobster_html_report",
        "//lobster/tools/core/html_report",
        "//tests_system",
        "@pip//selenium",
    ],
)

py_test(
    name = "test_input_file",
    srcs = ["test_input_file.py"],
    deps = [
        ":lobster_html_report",
        "//lobster/tools/core/html_report",
        "//tests_system",
    ],
)
