load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//:requirements.bzl", "requirement")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_html_report",
    srcs = [
        "lobster_UI_system_test_case_base.py",
        "lobster_UI_test_runner.py",
    ],
    data = [
        "//tests_system/lobster_html_report/data:html_report_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//tests_system",
        requirement("certifi"),
        requirement("packaging"),
        requirement("requests"),
        requirement("selenium"),
        requirement("urllib3"),
        requirement("webdriver-manager"),
    ],
)

py_test(
    name = "test_html_report",
    srcs = ["test_html_report.py"],
    deps = [
        ":lobster_html_report",
        "//lobster/tools/core/html_report",
        "//tests_system",
        requirement("selenium"),
    ],
)

py_test(
    name = "test_input_file",
    srcs = ["test_input_file.py"],
    deps = [
        ":lobster_html_report",
        "//lobster/tools/core/html_report",
        "//tests_system",
    ],
)
