load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//:requirements.bzl", "requirement")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_html_report",
    srcs = [
        "lobster_UI_system_test_case_base.py",
        "lobster_UI_system_asserter.py",
        "lobster_UI_test_runner.py",
    ],
    data = [
        "//tests_system/lobster_html_report/data:html_report_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//tests_system",
        requirement("certifi"),
        requirement("kaleido"),
        requirement("packaging"),
        requirement("plotly"),
        requirement("requests"),
        requirement("selenium"),
        requirement("urllib3"),
        requirement("webdriver-manager"),
    ],
)

py_test(
    name = "test_html_report",
    srcs = ["test_html_report.py"],
    # TODO: This test is manual because Selenium tests require a Googlechrome driver
    # from googlechromelabs.github.io, which needs to be provided first.
    # We need to update Bazel to download it first.
    tags = ["manual"],
    deps = [
        ":lobster_html_report",
        "//lobster/tools/core/html_report",
        "//tests_system",
        requirement("selenium"),
    ],
)

py_test(
    name = "test_input_file",
    srcs = ["test_input_file.py"],
    deps = [
        ":lobster_html_report",
        "//lobster/tools/core/html_report",
        "//tests_system",
        "//tests_system/tests_utils",
        requirement("kaleido"),
        requirement("plotly"),
    ],
)

py_test(
    name = "test_html_content",
    srcs = ["test_html_content.py"],
    deps = [
        ":lobster_html_report",
        "//lobster/tools/core/html_report",
        "//tests_system",
        "//tests_system/tests_utils",
        requirement("kaleido"),
        requirement("plotly"),
    ],
)

py_test(
    name = "test_online_report_input",
    srcs = ["test_online_report_input.py"],
    deps = [
        ":lobster_html_report",
        "//lobster/tools/core/html_report",
        "//tests_system",
        "//tests_system/tests_utils",
        requirement("kaleido"),
        requirement("plotly"),
    ],
)
